--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 
 	<body>
 		<div>
-			<header>
+			<div data-role="header">
 				<h1>Aaalamarangal</h1>
-			</header>
+			</div>
+			
+			<div data-role="page">
 			<ul>
 				<li>
 					<a href="">
@@ -45,7 +47,7 @@
 					</a>
 				</li>
 			</ul>
-			
+			</div>
 			
 			<footer>
 				<p>
